[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameScenes/SelectionScreen/game_location_sub_menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/GameScenes/SelectionScreen/art/game_field_icons.png" type="Texture" id=3]
[ext_resource path="res://GameUI/MenuElements/resources/dudelings_ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/GameUI/fonts/custom/huge_font.res" type="BitmapFont" id=5]
[ext_resource path="res://GameUI/MenuElements/button_element.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=7]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 1412, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=2]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=9]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 1765, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=5]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 1059, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=3]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 353, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=4]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 706, 0, 352, 234 )

[sub_resource type="AtlasTexture" id=8]
flags = 1
atlas = ExtResource( 3 )
region = Rect2( 2120, 0, 352, 234 )

[node name="GameLocationSubMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HeaderLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 24.0
margin_right = 213.0
margin_bottom = 84.0
grow_horizontal = 2
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "SELECT ARENA"
align = 1

[node name="MatchSetup" type="Button" parent="HeaderLabel"]
margin_left = 526.0
margin_top = -8.0
margin_right = 731.0
margin_bottom = 64.0
focus_neighbour_left = NodePath("../../Locations/GymButton")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../Locations/CityButton")
text = "MATCH SETUP"
script = ExtResource( 6 )

[node name="Locations" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -509.5
margin_top = -244.0
margin_right = 509.5
margin_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 20
custom_constants/hseparation = -20
columns = 3

[node name="BeachButton" type="TextureButton" parent="Locations"]
margin_right = 352.0
margin_bottom = 234.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../HeaderLabel/MatchSetup")
focus_neighbour_right = NodePath("../GymButton")
focus_neighbour_bottom = NodePath("../InfieldButton")
action_mode = 0
texture_normal = SubResource( 7 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )

[node name="GymButton" type="TextureButton" parent="Locations"]
margin_left = 332.0
margin_right = 684.0
margin_bottom = 234.0
focus_neighbour_left = NodePath("../BeachButton")
focus_neighbour_top = NodePath("../../HeaderLabel/MatchSetup")
focus_neighbour_right = NodePath("../CityButton")
focus_neighbour_bottom = NodePath("../StadiumButton")
focus_previous = NodePath("../BeachButton")
action_mode = 0
texture_normal = SubResource( 9 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )

[node name="CityButton" type="TextureButton" parent="Locations"]
margin_left = 664.0
margin_right = 1016.0
margin_bottom = 234.0
focus_neighbour_left = NodePath("../GymButton")
focus_neighbour_top = NodePath("../../HeaderLabel/MatchSetup")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../DestinationButton")
action_mode = 0
texture_normal = SubResource( 5 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )

[node name="InfieldButton" type="TextureButton" parent="Locations"]
margin_top = 254.0
margin_right = 352.0
margin_bottom = 488.0
focus_neighbour_top = NodePath("../BeachButton")
focus_neighbour_right = NodePath("../StadiumButton")
action_mode = 0
texture_normal = SubResource( 3 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )

[node name="StadiumButton" type="TextureButton" parent="Locations"]
margin_left = 332.0
margin_top = 254.0
margin_right = 684.0
margin_bottom = 488.0
focus_neighbour_left = NodePath("../InfieldButton")
focus_neighbour_top = NodePath("../GymButton")
focus_neighbour_right = NodePath("../DestinationButton")
action_mode = 0
texture_normal = SubResource( 4 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )

[node name="DestinationButton" type="TextureButton" parent="Locations"]
margin_left = 664.0
margin_top = 254.0
margin_right = 1016.0
margin_bottom = 488.0
focus_neighbour_left = NodePath("../StadiumButton")
focus_neighbour_top = NodePath("../CityButton")
action_mode = 0
texture_normal = SubResource( 8 )
texture_focused = SubResource( 2 )
script = ExtResource( 6 )
